upload profile image

--- a/views/profile/photo-add.hbs
+++ b/views/profile/photo-add.hbs
@@ -1,22 +1,11 @@
 {{!-- views/photo-add.hbs --}}
-
-<h2>Upload a new profile picture</h2>
-<form method="post" enctype="multipart/form-data" action="/photo/add">
-    <input type="file" name="file">
-    <input type="submit" value="Submit">
-</form>
 <div class="text-white">
 <h2>upload a new profile picture</h2>
-<form action="/photo/add" method="post" enctype="multipart/form-data">
-  {{!-- <label>Title</label>
-  <input type="text" name="title">
-
-  <label>Description</label>
-  <input type="text" name="description">
-
-  <label>Poster</label>
-  <input type="file" name="photo"> --}}
-
-  <input type="submit" value="SAVE">
+<form method="post" enctype="multipart/form-data" action="/photo/add">
+    <input type="file" id="file" name="image">
+    <input type="submit" value="Submit">
+    <button>Update</button>
 </form>
+
+
 </div>
