--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -24,7 +24,7 @@
 
 <div class="text-white">
   <p>welcome to the galaxy, {{user.username}}</p>
-  <img src="../{{user.profileImg}}" width="200px" height="200px" />
+  <img src="{{user.profileImg.image}}" width="200px" height="200px" />
   <p>homeworld: {{planet}}</p>
   <p>age: {{user.age}}</p>
   <p>about me: {{user.bio}}</p>
