--- a/views/profile/photo-add.hbs
+++ b/views/profile/photo-add.hbs
@@ -3,8 +3,7 @@
 <h2>upload a new profile picture</h2>
 <form method="post" enctype="multipart/form-data" action="/photo/add">
     <input type="file" id="file" name="image">
-    <input type="submit" value="Submit">
-    <button>Update</button>
+    <button type="submit">Save</button>
 </form>
 
 
