--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/profile">your profile</a>
+                    <a class="nav-link text-white" href="/profile/{{_id}}">your profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/logout">Logout</a>
