--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,15 +63,6 @@ nav {
 .font {
   color: whitesmoke; }
 
-.bar-left {
-  margin-top: 19em;
-  color: whitesmoke;
-  position: fixed; }
-
-.bar-right {
-  margin-top: 11rem;
-  position: fixed; }
-
 footer {
   height: 2rem;
   bottom: 0;
@@ -88,14 +79,50 @@ main {
   visibility: hidden;
   opacity: 0; }
 
-.text-white {
+.containerProfile {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  flex-direction: column; }
-  .text-white img {
-    object-fit: cover; }
+  justify-content: center;
+  margin-top: 3rem; }
 
-.prifile-container {
-  background-color: aqua; }
+.username {
+  font-size: 1.5rem; }
+
+.username:hover {
+  color: #138396;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3); }
+
+.profilePic:hover {
+  border-radius: 50%; }
+
+.aboutMe:hover {
+  -webkit-animation: swing 1s ease;
+  animation: swing 1s ease;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1; }
+
+.functionalities {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly; }
+
+.funcionalitiesElem {
+  font-size: 1.3rem; }
+
+.funcionalitiesElem:hover {
+  color: #138396 !important; }
+
+.titleEditProf {
+  margin-top: 3rem; }
+
+.editProf {
+  margin-top: 1.5rem; }
+
+.photoUpload {
+  margin-top: 3rem; }
 
 /*# sourceMappingURL=style.css.map */
