--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,8 @@
 // Small devices (landscape phones, 576px and up)
-@media (max-width: 576px) { }
+@media (max-width: 576px) {}
 
 // Medium devices (tablets, 768px and up)
-@media (max-width: 850px) { }
+@media (max-width: 850px) {}
 
 @media (max-width: 1200px) {
   nav {
@@ -81,7 +81,6 @@ body {
 
 
 nav {
- 
   background-color: transparent;
 }
 
@@ -99,21 +98,6 @@ nav {
 
 .font {
   color: whitesmoke;
-}
-
-// left bar
-
-.bar-left {
-  margin-top: 19em;
-  color: whitesmoke;
-  position: fixed;
-}
-
-//right bar
-
-.bar-right {
-  margin-top: 11rem;
-  position: fixed;
 }
 
 // Footer
@@ -143,17 +127,72 @@ main {
 
 //profile
 
-.text-white{
-  
+.containerProfile {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  flex-direction: column; 
-  img{
-    object-fit: cover;
-  }
+  justify-content: center;
+  margin-top: 3rem;
 }
 
-.prifile-container{
-  background-color: aqua;
-   
+.username {
+  font-size: 1.5rem;
+}
+
+.username:hover {
+  color: #138396;
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+}
+
+// .username:hover
+// {
+//         -webkit-transform: rotateZ(-30deg);
+//         -ms-transform: rotateZ(-30deg);
+//         transform: rotateZ(-30deg);
+// }
+
+.profilePic:hover {
+  border-radius: 50%;
+}
+
+.aboutMe:hover {
+  -webkit-animation: swing 1s ease;
+  animation: swing 1s ease;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
+// functionalities
+
+.functionalities {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.funcionalitiesElem {
+  font-size: 1.3rem;
+}
+
+.funcionalitiesElem:hover {
+  color: #138396 !important;
+}
+
+// edit profile
+
+.titleEditProf {
+  margin-top: 3rem;
+}
+
+.editProf {
+  margin-top: 1.5rem;
+}
+
+// photo upload
+
+.photoUpload {
+  margin-top: 3rem;
 }
