--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light border-0 mb-5">
-        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
-                class="navbar-text text-info font-italic text-left"> A space trip!
-            </span></a>
+        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span class="navbar-text text-info font-italic text-left"> A space trip!</span></a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon toggler"></span>
