--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5">
-        <a class="navbar-brand text-white font-weight-bold" href="/">Starbook <span
+        <a class="navbar-brand text-white font-weight-bold" href="/newsfeed">Starbook <span
                 class="navbar-text text-info font-italic text-left"> A space trip!
             </span></a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
