confirmation of deletion, save selected when editinig profile

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -128,6 +128,9 @@ main {
 //profile
 
 .containerProfile {
+  img{
+    object-fit: cover;
+  }
   display: flex;
   flex-direction: column;
   align-items: center;
