--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,8 @@ main {
   align-items: center;
   justify-content: center;
   margin-top: 3rem; }
+  .containerProfile img {
+    object-fit: cover; }
 
 .username {
   font-size: 1.5rem; }
