--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -27,7 +27,7 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card card-signin my-5">
         <div class="card-body">
-          <h5 class="card-title text-center">Login</h5>
+          <h5 class="card-title text-center">sign up</h5>
           <form class="form-signin" action="/signup" method="POST" id="form">
             <div class="form-label-group text-center">
               <input type="text" id="inputText" name="username" class="form-control text-center"
