--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -40,10 +40,41 @@
     </div>
     <div>
         {{!-- this should be a form! --}}
-        <form action="/deleteprofile/{{user._id}}">
-            <button class="btn btn-lg btn-block text-center" type="submit"><a
-                    class="text-info"> delete my profile (think twice)</a></button>
-        </form>
+        {{!-- <form action="/deleteprofile/{{user._id}}" method="POST"> --}}
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-lg btn-block text-center btn-primary" data-toggle="modal" data-target="#exampleModal{{user._id}}">
+                delete my profile
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal{{user._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel{{user._id}}"
+                aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel{{user._id}}">DELETE</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete your profile?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <a href="/deleteprofile/{{user._id}}" class="btn btn-danger">Delete</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+            
+        {{!-- </form> --}}
         {{!-- this should be a form! --}}
     </div>
 </div>
