--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -42,7 +42,7 @@
             </div>
 
             {{#if errorMessage }}
-            <div class="error-message">{{ errorMessage }}</div>
+            <div class="text-center error-message">{{ errorMessage }}</div>
             {{/if}}
 
             <button class="btn btn-lg btn-info btn-block text-center" type="submit">Sign in</button>
