--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="form-group">
-            <button class="btn btn-lg btn-block text-center buttonPhoto" type="submit"><a
+            <button class="btn btn-lg btn-block text-center buttonPhoto" type="submit" href="/profile"><a
                     class="text-info form-control"> save (yourself) now</a></button>
     </form>
 </div>
