--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,12 +15,17 @@
 </head>
 
 <body>
-
+  <main></main>
   {{{body}}}
-
   <span class="containerCursor"></span>
 
   {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
+
+  {{!-- STARS --}}
+  <aside style="display:none">
+    <img class="star" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/neon-star7.png">
+    <img class="star" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/neon-star10.png">
+  </aside>
 
   <footer class="fixed-bottom">
     <div class="card">
@@ -53,7 +58,6 @@
 
   {{!-- Google sign in --}}
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-
 </body>
 
 
