--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -22,7 +22,7 @@
 
 <div class="containerProfile text-white">
     <p class="username">welcome to the galaxy, {{user.username}}!</p>
-    <img class="profilePic" src="{{user.profileImg.image}}" width="200px" height="200px" />
+    <img class="profilePic" onerror="if (src != "{{user.profileImg.image}}") src = '/images/defaultImg.jpg';" src="{{user.profileImg.image}}" width="240px" height="240px" />
     <p>homeworld: {{planet}}</p>
     <p>age: {{user.age}}</p>
     <p class="aboutMe">about me: {{user.bio}}</p>
