--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,12 +12,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="../stylesheets/style.css" />
+    <script src="/javascripts/cursor.js"></script>
+
 </head>
 
 <body>
   <main></main>
   {{{body}}}
-  <span class="containerCursor"></span>
+<span class="cursorEff"></span>
 
   {{!-- <div>“The Force will be with you. Always.”<span>obi-wan kenobi</span></div> --}}
 
