add photo to the post, no default profile image

--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -29,6 +29,8 @@
             <li>
                 {{this.title}}
                 {{this.body}}
+                <img class="profilePic" src="{{this.postImg}}" width="240px" height="240px" />
+
                 {{this.postedBy.username}}
             </li>
             {{/each}}
