--- a/views/post/add.hbs
+++ b/views/post/add.hbs
@@ -1,6 +1,9 @@
-<form action="/addpost" method="POST">
+<form action="/addpost" enctype="multipart/form-data" method="POST">
 <input type="text" name="title" id="">
 <input type="text" name="body" id="">
+<input type="file" id="file" name="Post-image">
 <span>{{user.username}}</span>
-<button type="submit">Send</button>
+<button class="btn btn-lg btn-block text-center" type="submit">
+  <a class="text-info">post </a></button>
 </form>
+
