--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,7 +105,7 @@ main {
   -ms-transform: scale(1.3);
   transform: scale(1.3); }
 
-.profilePic:hover {
+.profilePic {
   border-radius: 50%; }
 
 .aboutMe:hover {
@@ -132,10 +132,24 @@ main {
 .editProf {
   margin-top: 1.5rem; }
 
+.buttonDeleteColor {
+  background-color: #138396; }
+
 .photoUpload {
   margin-top: 3rem; }
 
 .newsfeed {
   margin-top: 2rem; }
+
+.ulNewsfeed {
+  list-style-type: none;
+  text-indent: -2rem;
+  position: fixed; }
+
+.postAuthor {
+  color: #138396; }
+
+.usersList {
+  color: #138396; }
 
 /*# sourceMappingURL=style.css.map */
