--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -27,5 +27,6 @@
   <h1 class="errorMessages text-center">404 error</h1>
   <h2 class="errorMessages text-center">did you get lost?</h2>
   <h2 class="errorMessages text-center">this route does not exist on the app!</h2>
-  <div class="errorMessages text-center"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div>
+  {{!-- <div class="errorMessages text-center"><img src="/images/jumping-fox.gif" alt="jumping-fox"></div> --}}
+  <img src="../images/hs-404-error-no-text.jpg" alt="" width="550px">
 </div>
