--- a/views/profile/edit-profile.hbs
+++ b/views/profile/edit-profile.hbs
@@ -13,7 +13,7 @@
                     <a class="nav-link text-info" href="/newsfeed">Newsfeed</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="/profile/{{_id}}">your profile</a>
+                    <a class="nav-link text-white" href="/profile/{{user.id}}">your profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="/logout">Logout</a>
