--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -22,7 +22,11 @@
 
 <div class="containerProfile text-white">
     <p class="username">welcome to the galaxy, {{user.username}}!</p>
+    {{#if user.profileImg}}
     <img class="profilePic" src="{{user.profileImg.image}}" width="240px" height="240px" />
+    {{else}}
+    <img class="profilePic" src="/images/defaultImg.jpg" width="240px" height="240px" />
+    {{/if}}
     <p>homeworld: {{planet}}</p>
     <p>age: {{user.age}}</p>
     <p class="aboutMe">about me: {{user.bio}}</p>
