--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,7 +44,7 @@
                 <a class="btn btn-info btn-lg text-center" href="/signup" role="button">Signup now!</a>
             </p>
             <p class="lead text-white font-weight-bold">
-                <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center" role="button">Leave the
+                <a class="btn btn-info btn-lg animated hinge slow delay-3s text-center fallingAnimation" role="button">Leave the
                     site
                     now!</a>
                 <h1 class="animated fadeInRightBig text-white slower delay-2s text-center indentLogo">@</h1>
