--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -109,6 +109,12 @@ nav {
   color: whitesmoke;
 }
 
+.fallingAnimation {
+  position: fixed;
+  left: 40.5%;
+  z-index: -1;
+}
+
 // Footer
 
 footer {
