--- a/views/post/edit.hbs
+++ b/views/post/edit.hbs
@@ -1,3 +1,27 @@
+<header>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light mb-5">
+        <a class="navbar-brand text-white font-weight-bold" href="/newsfeed">Starbook <span
+                class="navbar-text text-info font-italic text-left"> A space trip!
+            </span></a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon toggler"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-info" href="/newsfeed">Newsfeed</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/profile/{{user.id}}">your profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
 
 <form action="/editpost/{{post.id}}" method="POST">
 
