add random gif on newsfeed

--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -45,4 +45,8 @@
             {{/each}}
         </ul>
     </div>
+
+    <div class="giphy">
+        <img src='{{giphy}}' width="300px" height="300px">
+    </div>
 </div>
