added sword cursor

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,11 +13,11 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="../stylesheets/style.css" />
   <script src="/javascripts/cursor.js"></script>
-
+  <style type="text/css">* {cursor: url(http://cur.cursors-4u.net/others/oth-1/oth24.cur), auto !important;}</style><a href="http://www.cursors-4u.com/cursor/2005/07/07/oth24.html" target="_blank" title="Star Wars Lightsaber"><img src="http://cur.cursors-4u.net/cursor.png" border="0" alt="Star Wars Lightsaber" style="position:absolute; top: 0px; right: 0px;" /></a>
 </head>
 
 <body>
-  <span class="cursorEff"></span>
+  {{!-- <span class="cursorEff"></span> --}}
   <main></main>
 
   {{{body}}}
