--- a/views/newsfeed.hbs
+++ b/views/newsfeed.hbs
@@ -68,7 +68,7 @@
             <br>
             {{#each users}}
             <li>
-                <a class="usersList" href="/profile/{{id}}">& {{this.username}}</a>
+                &<a class="usersList" href="/profile/{{id}}"> {{this.username}}</a>
             </li>
             {{/each}}
         </ul>
