--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -37,7 +37,6 @@ main {
 
 @font-face {
   font-family: starWarsFont;
-  // src: url(../font/DeathStar-VmWB.ttf);
   src: url(../font/Starjedi.ttf);
 }
 
@@ -157,6 +156,13 @@ main {
   font-size: 1.5rem;
 }
 
+.usernameFont {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+}
+
 .username:hover {
   color: #138396;
   -webkit-transform: scale(1.3);
@@ -236,7 +242,11 @@ main {
 }
 
 .usersList {
-  color: #138396;
+  color: #3b9eb0;
+  font-family: 'Josefin Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 1.1875rem;
 }
 
 // posts
