--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -21,7 +21,7 @@
 </header>
 
 <div class="containerProfile text-white">
-    <p class="username">welcome to the galaxy, {{user.username}}!</p>
+    <p class="username">welcome to the galaxy, <span class="usernameFont">{{user.username}}</span>!</p>
     {{#if user.profileImg}}
     <img class="profilePic" src="{{user.profileImg.image}}" width="240px" height="240px" />
     {{else}}
